Notebook - Migrate to React - View Table